@@ -287,6 +287,9 @@ else()
       ${LLVM_LINK_COMPONENTS}
     )
   endif()
+  if (UNIX)
+    target_link_libraries(dffi PRIVATE dl)
+  endif()
   clang_target_link_libraries(dffi PRIVATE ${CLANG_LINK_LIBRARIES})
   set(DFFI_LIBRARY dffi)
 endif()
