@@ -26,6 +26,7 @@ config.substitutions.append(("%build_dir",config.build_dir))
 config.substitutions.append(("%llvm_bindir",config.llvm_bindir))
 config.substitutions.append(("%FileCheck",os.path.join(config.llvm_bindir,"FileCheck" + config.exe_suffix)))
 config.substitutions.append(("%exeext",config.exe_suffix))
+config.substitutions.append(("%clang", config.llvm_bindir + "/clang" + config.exe_suffix))
 
 if platform.system() in ("Darwin"):
     config.available_features.add("darwin")
