@@ -2,6 +2,8 @@
 -----
 
 * Fix creation of functions by their type and absolute address
+* Add API to add custom symbols
+* Add API to get base address of dlopen'ed libraries
 
 0.5.1
 -----
